@@ -1,5 +1,10 @@
 2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
+	* src/Makefile.am:
+	Fix parallel build.
+
+2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
 	* Makefile.am:
 	Remove intltool generated tools on distclean, not clean.
 
